# rules_variant

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  CODEOWNERS  MODULE.bazel  NOTICE  README.md  WORKSPACE  cog.toml  default.nix
.bazelrc.d/: base.bazelrc
.git-hooks/: pre-commit.bash
.github/workflows/: ci.yaml  publish.yaml  release.yaml  release_prep.sh
docs/: BUILD.bazel
docs/variant/: BUILD.bazel  defs.md
docs/variant/workspace/: BUILD.bazel  defs.md  deps.md
examples/: .bazelignore  .bazelrc  .bazelrc.d  .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel  faulty.spec.json  run_tests.sh  variant.spec.json
examples/cc_complex/: BUILD.bazel  README.md  graph.dot  greeting.bye.cc  greeting.h  greeting.hello.cc  main.cc
examples/cc_simple/: BUILD.bazel  README.md  bye-world.cc  graph.dot  hey-world.cc
examples/copt_setting/: BUILD.bazel  README.md  graph.dot  main.c
examples/implicit_settings/: BUILD.bazel  README.md  defs.bzl  extra.variation.json  graph.dot  main.c  variant.spec.json
examples/kitchen/: BUILD.bazel  README.md  basil.h  basil_dried.cc  basil_fresh.cc  cheese.h  cheese_mild.cc  cheese_sharp.cc  garlic.cc  garlic.h  gourmet_pizza.cc  graph.dot  kitchen.spec.json  olive_oil.cc  olive_oil.h  rustic_tomato_soup.cc  salt.cc  salt.h  salty.salt.cc  seasoned_tomato_sauce.cc  seasoned_tomato_sauce.h  spaghetti_al_pomodoro.cc  tomato.h  tomato_chopped.cc  tomato_crushed.cc  tomato_whole.cc
examples/local_variants/: BUILD.bazel  README.md  hello-world.cc
examples/print_info/: BUILD.bazel  README.md  graph.dot
examples/reproducible_configuration/: README.md  dumped.spec.json
examples/reproducible_configuration/original/: BUILD.bazel
examples/reproducible_configuration/reproduced/: BUILD.bazel
examples/target_level_overrides/: BUILD.bazel  README.md  defs.bzl  graph.dot  variant.spec.json
examples/tv_channels/: BUILD.bazel  README.md  defs.bzl  graph.dot  variant.spec.json
examples/variable_build_attributes/: BUILD.bazel  README.md  graph.dot  modern.main.c  older.main.c  variant.spec.json
nix/: sources.json  sources.nix
tools/: README.md  config2variant.jq  gen_release_artifacts.bash
tools/configviz/: color_mapper.sh
variant/: BUILD.bazel  defs.bzl
variant/private/: BUILD.bazel  derivation.bzl  filter.bzl  flags.bzl  variant.bzl
variant/workspace/: BUILD.bazel  defs.bzl  deps.bzl
variant/workspace/private/: BUILD.bazel  schemas.scl  template_generator.bzl  templates_factory.bzl
variant/workspace/private/templates/: BUILD.bazel  BUILD.bazel.scl  WORKSPACE.bazel.scl  defs.bzl.scl  rules.bzl.scl
