# Copyright (c) 2026, ASML Netherlands B.V.
# All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "rules_variant",
    version = "0.0.0",
)

bazel_dep(
    name = "aspect_bazel_lib",
    version = "2.22.5",
    dev_dependency = True,
)
bazel_dep(
    name = "bazel_features",
    version = "1.47.1",
    dev_dependency = True,
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.9.0",
    dev_dependency = True,
)
bazel_dep(
    name = "bazel_skylib_gazelle_plugin",
    version = "1.9.0",
    dev_dependency = True,
)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.5.1.2",
    dev_dependency = True,
)

bazel_dep(
    name = "cgrindel_bazel_starlib",
    version = "0.30.0",
    # This has to be a dependency,
    # because it's part of the loaded buildfiles..
    # TODO: Get rid of this?
    dev_dependency = False,
)

bazel_dep(
    name = "gazelle",
    version = "0.51.0",
    dev_dependency = True,
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "hermetic_cc_toolchain",
    version = "4.1.0",
    dev_dependency = True,
)

toolchains = use_extension(
    "@hermetic_cc_toolchain//toolchain:ext.bzl",
    "toolchains",
    dev_dependency = True,
)
use_repo(
    toolchains,
    "zig_sdk",
)

register_toolchains(
    "@zig_sdk//toolchain/...",
    "@zig_sdk//libc_aware/toolchain/...",
    dev_dependency = True,
)

bazel_dep(
    name = "protobuf",
    version = "35.0",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_bazel_integration_test",
    version = "0.37.1",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_go",
    version = "0.60.0",
    dev_dependency = True,
)

go_sdk = use_extension(
    "@rules_go//go:extensions.bzl",
    "go_sdk",
    dev_dependency = True,
)
go_sdk.download(
    goarch = "amd64",
    goos = "linux",
    version = "1.24.12",
)

bazel_dep(
    name = "rules_java",
    version = "8.16.1",
    dev_dependency = True,
)
single_version_override(
    module_name = "rules_java",
    version = "9.6.1",
)

# Java compatibility layer
compat = use_extension(
    "@rules_java//java:rules_java_deps.bzl",
    "compatibility_proxy",
)
use_repo(compat, "compatibility_proxy")

# This is required, because Bazel injects
# certain SUFFX section to each WORKSPACE
# definiton, which will cause eager load
# of WORKSPACE-protobuf.
# Explicitly setting rules_python to originate
# from bzlmod stops that.
bazel_dep(
    name = "rules_python",
    version = "2.0.2",
    dev_dependency = True,
)
bazel_dep(
    name = "stardoc",
    version = "0.8.1",
    dev_dependency = True,
)
