# Copyright (c) 2026, ASML Netherlands B.V.
# All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_example_cc//example_cc:defs.bzl", "cc_binary")

cc_binary(
    name = "main",
    srcs = ["main.c"],
    # DEBUG: Enables verbose output (-v) and includes debug symbols (-g).
    #        Options: "-Denvironment=DEBUG", "-Dversion=LATEST", "-g", "-v"
    # TEST: Disables optimizations (-O0) for easier debugging.
    #       Options: "-Denvironment=TEST", "-Dversion=BETA", "-O0"
    # PROD: Sets optimization for production without debug symbols.
    #       Options: "-Denvironment=PROD", "-Dversion=1.0FINAL2"
    variations = [
        "DEBUG",
        "PROD",
        "TEST",
    ],
)
