# Copyright (c) 2026, ASML Netherlands B.V.
# All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@implicit_settings_variant_maps//:rules.bzl", "cc_binary")
load(":defs.bzl", "cc_define")

string_flag(
    name = "well_known",
    build_setting_default = "undefined",
    values = [
        "blue",
        "red",
        "undefined",
    ],
)

cc_define(
    name = "define_well_known",
    build_setting = ":well_known",
)

string_flag(
    name = "secret",
    build_setting_default = "undefined",
    values = [
        "hot",
        "cold",
        "undefined",
    ],
)

cc_define(
    name = "define_secret",
    build_setting = ":secret",
)

cc_binary(
    name = "main",
    srcs = ["main.c"],
    variations = [
        "windows",
        "linux",
    ],
    deps = [
        ":define_secret",
        ":define_well_known",
    ],
)
