# Copyright (c) 2026, ASML Netherlands B.V.
# All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Load the custom cc_binary rule from the @goto.fail repository.
load("@goto.fail//:rules.bzl", "cc_binary")

# cc_binary rule defines a C++ binary target.
# This variant of cc_binary is exclusive to this workspace and provided by goto.fail.
cc_binary(
    name = "main",
    # The 'srcs' attribute specifies the source files for the binary.
    srcs = ["hello-world.cc"],
    # The 'configs' attribute lists the build configurations under which this target can be built.
    # 'alpha' and 'final2' are project-specific configurations.
    variations = [
        "rhel8x64_broken",
        "wrl6x64_broken",
    ],
    # Visibility setting allows this target to be referenced by any targets in subpackages.
    visibility = ["//:__subpackages__"],
)
