# Copyright (c) 2026, ASML Netherlands B.V.
# All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Load the 'info' rule from the rules_info repository.
# The 'info' rule is utilized here to define targets that print information about the currently used platform or target.
# This is especially useful for debugging and verifying build configurations.
load("@rules_info//info:defs.bzl", "info")

# Define an 'info' target named 'triple'.
# This target is configured to print details about the platform or target for three specified configurations.
# It demonstrates the ability to handle multiple platform configurations within a single target.
info(
    name = "triple",
    variations = [
        "rhel8x64",  # Configuration for the RHEL 8 x86_64 platform.
        "wrl18ppce6500_dev",  # Development configuration for the WRL 18 PPC e6500 platform.
        "wrl6x64_dbg",  # Debug configuration for the WRL 6 x86_64 platform.
    ],
)

# Define an 'info' target named 'double'.
# Similar to 'triple', but prints platform or target information for two configurations.
info(
    name = "double",
    variations = [
        "wrl18ppce6500_dev",  # Development configuration for the WRL 18 PPC e6500 platform.
        "wrl6x64_dbg",  # Debug configuration for the WRL 6 x86_64 platform.
    ],
)

# Define an 'info' target named 'single'.
# This target prints platform or target information for a single configuration
info(
    name = "single",
    variations = [
        "wrl6x64_dbg",  # Debug configuration for the WRL 6 x86_64 platform.
    ],
)
