# Copyright (c) 2026, ASML Netherlands B.V.
# All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(
    "@rules_tv//:rules.bzl",
    "content_provider",
    plays = "variations",
    radio = "genrule",
    tv = "vgenrule",
)

content_provider(
    name = "acme_media",
    content = select(
        {
            plays["sports"]: "basketball on ice",
            plays["weather"]: "hot or not",
            "//conditions:default": "commercials",
        },
    ),
)

tv(
    name = "channel",
    outs = ["play"],
    cmd = """
echo '#!/bin/sh' >> $@
echo 'echo "\n\t    Device: TV"' >> $@
echo 'echo "\t   Channel: {config}"' >> $@
echo 'echo "\t     Plays: $(CONTENT)\n"' >> $@
""",
    executable = True,
    toolchains = [":acme_media"],
    variations = [
        "sports",
        "weather",
    ],
)

radio(
    name = "channel",
    outs = ["play"],
    cmd = """
echo '#!/bin/sh' >> $@
echo 'echo "\n\t   Device: Radio"' >> $@
echo 'echo "\t    Plays: $(CONTENT)\n"' >> $@
""",
    executable = True,
    toolchains = [":acme_media"],
    variation = "default",
)
