# Copyright (c) 2026, ASML Netherlands B.V.
# All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzl_library(
    name = "flags",
    srcs = ["flags.bzl"],
    visibility = ["//variant:__subpackages__"],
    deps = [
        "@bazel_skylib//lib:selects",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "variant",
    srcs = ["variant.bzl"],
    visibility = ["//variant:__subpackages__"],
    deps = ["@with_cfg.bzl//:with_cfg"],
)

bzl_library(
    name = "derivation",
    srcs = ["derivation.bzl"],
    visibility = ["//variant:__subpackages__"],
    deps = [],
)

bzlformat_pkg(name = "bzlformat")

bzl_library(
    name = "filter",
    srcs = ["filter.bzl"],
    visibility = ["//variant:__subpackages__"],
)
