# Copyright (c) 2026, ASML Netherlands B.V.
# All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzl_library(
    name = "templates_factory",
    srcs = ["templates_factory.bzl"],
    visibility = ["//variant/workspace:__subpackages__"],
    deps = [
        ":template_generator",
        "//variant/workspace/private/templates",
    ],
)

# keep
bzl_library(
    name = "schemas",
    srcs = ["schemas.scl"],
    visibility = ["//variant/workspace:__subpackages__"],
)

bzlformat_pkg(name = "bzlformat")

bzl_library(
    name = "template_generator",
    srcs = ["template_generator.bzl"],
    visibility = ["//variant/workspace:__subpackages__"],
)
